<resources>
    <string name="start_publishing">Start Publishing</string>
    <string name="stop_publishing">Stop publishing</string>
    <string name="start_playing">Start Playing</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="preset">Preset</string>
    <string name="custom_param">Custom Param</string>
    <string name="pitch">Pitch</string>
    <string name="reverb">Reverb</string>
    <string name="roomsize">Room Size</string>
    <string name="Reverberance">Reverberance</string>
    <string name="dampping">Dampping</string>
    <string name="wetonly">WetOnly</string>
    <string name="wet_gain">Wet Gain</string>
    <string name="tone_low">Tone Low</string>
    <string name="tone_high">Tone High</string>
    <string name="pre_delay">PreDelay</string>
    <string name="stereo_width">StereoWidth</string>
    <string name="reverb_echo">Reverb Echo</string>
    <string name="virtual_stereo">Virtual Stereo</string>
    <string name="angle">Angle</string>
    <string name="dry_gain">Dry Gain</string>
    <string name="voice_change_reverb_stereo">Voice Change, Reverb, Stereo</string>
    <string name="preview">Preview</string>
    <string name="play_stream">Play Stream</string>
    <string name="ear_return_and_channel_settings">Ear Return and Channel Settings</string>
    <string name="headphone_monitor">HeadphoneMonitor</string>
    <string name="volume">Volume</string>
    <string name="stereo_channel">Stereo Channel</string>
    <string name="encoder_stereo">Encoder Stereo</string>
    <string name="capture_stereo">Capture Stereo</string>
    <string name="start_soundlevel_monitor">Start SoundLevel Monitor</string>
    <string name="start_audio_spectrum_monitor">Start Audio Spectrum Monitor</string>
    <string name="soundlevel_and_audiospectrum">SoundLevel and AudioSpectrum</string>
    <string name="AEC_ANS_AGC">AEC,ANS,AGC</string>
    <string name="headphone_aec">Headphone AEC</string>
    <string name="aec">AEC</string>
    <string name="aec_info">If your device comes with a hardware-level echo cancellation function, you will not be able to clearly feel the effect of echo cancellation when you turn on the AEC function of the SDK.</string>
    <string name="agc">AGC</string>
    <string name="ans">ANS</string>
    <string name="load_resource">Load Resource</string>
    <string name="play_count">Play Count</string>
    <string name="publish_out">Publish Out</string>
    <string name="audioeffect">AudioEffect</string>
    <string name="audio_effect_player">Audio Effect Player</string>
    <string name="enable_audio_data_callback">Enable Audio Data Callback</string>
    <string name="original_audio_data_acquisition">Original Audio Data Acquisition</string>
    <string name="audio_source">Audio Source</string>
    <string name="local_media">Local Media</string>
    <string name="microphone">Microphone</string>
    <string name="custom_audio_capture_and_render">Custom Audio Capture And Render</string>
    <string name="login_page">Login Page</string>
    <string name="headphone_info">Please plug in the earphones before experiencing the ear return function</string>
    <string name="user_id_colon">UserID: </string>
    <string name="user_position">Position </string>
</resources>