<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".audio3a.Audio3aActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <im.zego.commontools.logtools.logLinearLayout
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RoomID:0019 UserID:"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/userIDText"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/roomStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Room state"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/roomState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true" />

        <TextureView
            android:id="@+id/PreviewView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@id/view"
            android:layout_toLeftOf="@id/view"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/view"
            android:layout_toLeftOf="@id/view"
            android:gravity="center"
            android:text="@string/preview"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextureView
            android:id="@+id/PlayView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="8dp"
            android:layout_toEndOf="@id/view"
            android:layout_toRightOf="@id/view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/view"
            android:layout_toRightOf="@id/view"
            android:gravity="center"
            android:text="@string/play_stream"
            android:textColor="@color/black"
            android:textSize="13sp" />
        <Button
            android:id="@+id/startPublishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/view"
            android:layout_alignBottom="@id/PreviewView"
            android:text="@string/start_publishing"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/startPlayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/view"
            android:layout_alignBottom="@id/PreviewView"
            android:text="@string/start_playing"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/publishIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Publish StreamID:"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/PreviewView"
            android:layout_alignLeft="@id/PreviewView"
            android:textColor="@color/black"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/editPublishStreamID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:text="0019"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:layout_toLeftOf="@+id/view"
            android:layout_toRightOf="@id/publishIDTitle"
            android:layout_below="@id/PreviewView"/>
        <TextView
            android:id="@+id/playIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play StreamID:"
            android:layout_marginVertical="10dp"
            android:layout_below="@id/PlayView"
            android:layout_alignLeft="@id/PlayView"
            android:textColor="@color/black"
            android:textSize="12sp"/>
        <EditText
            android:id="@+id/editPlayStreamID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_round"
            android:text="0019"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="12sp"
            android:layout_alignRight="@id/PlayView"
            android:layout_toRightOf="@id/playIDTitle"
            android:layout_below="@id/PreviewView"/>
    </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aec"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/little_dark_grey"
            android:padding="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aec_info"
            android:background="@color/little_dark_grey"
            android:textSize="10sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/aec_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aec"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"/>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/headphone_aec_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headphone_aec"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="10dp"
                android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AEC Mode"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_below="@id/aec_switch"
                android:layout_margin="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/aec_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/AECMode"
                android:layout_margin="10dp"
                android:theme="@style/spinner_style"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/headphone_aec_switch"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agc"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/little_dark_grey"
            android:padding="10dp"/>
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/agc_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agc"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ans"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/little_dark_grey"
            android:padding="10dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ans_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ans"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/ans_switch"
                android:text="ANS Mode"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="10dp"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/ans_mode_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/ANSMode"
                android:layout_margin="10dp"
                android:theme="@style/spinner_style"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/ans_switch"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>